scribble-test/src/test/resources/good/reach/globals/gdo/Test06c.scr
module good.reach.globals.gdo.Test06c;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
		do Bar(A, B);
	}
	or
	{
		2() from A to B;
	}
	3() from A to B;
}

global protocol Bar(role C, role D)
{
	5() from C to D;
	do Bar(C, D);
}

